# tg-summarizer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: docker.yml
src/bot/: handlers.py  keyboards.py  main.py
src/db/: database.py  models.py  qdrant_utils.py
src/pipeline/: collector.py  filter.py  summarizer.py
src/utils/: datetime_utils.py  embedder.py  i18n.py  logging_config.py  monitoring.py  source_validator.py  stats_tracker.py  telethon_login.py  text_utils.py  user_tracker.py
